FEAT: Fixed auth and requester routes
